--- a/cheat sheet.html
+++ b/cheat sheet.html
@@ -150,7 +150,9 @@
     <!-- laravel number varification otp  -->
 
     website ->>>nexmo dashboard 
-    github ->>>nexmo laravel package 
+    github ->>> https://bestofphp.com/repo/nexmo-nexmo-php
+    composer require vonage/client-core:^2.3
+
 
 
     <!-- controlller code  -->
